--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Flask==2.0.2
 mediapipe==0.8.9.1
 opencv_python==4.5.4.58
 Pillow==9.0.0
-torch==1.10.0
-torchvision==0.11.1
+torch==1.10.0+cpu
+torchvision==0.11.1+cpu
