--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
--f https://download.pytorch.org/whl/torch_stable.html
-torch==1.9.1+cpu
-torchvision==0.10.1+cpu
-Flask==2.0.2
+fastapi==0.71.0
 mediapipe==0.8.9.1
+numpy==1.20.3
 opencv_python==4.5.4.58
-opencv-python-headless==4.5.3.56
 Pillow==9.0.0
+torch==1.10.0+cpu
+torchvision==0.11.1+cpu
+uvicorn==0.13.1
